fix: update assertion method in ProductServiceTest